fixed main.scss file to align author book cards on author view function display

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -96,3 +96,20 @@ body {
     white-space: pre-wrap;
   }
 }
+
+.card-view{
+  display: inline-block;
+  width: 300px;
+  margin: 5px;
+  img{
+    width: 298px;
+    height: 400px;
+    margin-top: 2rem;
+  }
+  
+  .card-body{
+    background-color: white;
+
+  }
+
+}
